added html validator ref to html file. ready for submission

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -29,7 +29,7 @@
         </div>
         <!--Division for the validation image-->
             <div style="text-align: center;">
-                <a href="#>">
+                <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Farindakhill.github.io%2Flab1%2F">
          <img src="htmlchecker.png" alt="html-checker" style="width: 10%;">
          </a>
          </div>
