--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/lab1/ethan.jpeg"/>
     <title>Hillary's Home page</title>
 </head>
 <body>
@@ -15,16 +16,16 @@
         <div style="text-align: left; display: inline-block;">
             <ul>
                 <li>Lab0: This Home page</li>
-              <a href="#"> <li>Lab1: About Me</li> </a>  
+              <li><a href="#"> Lab1: About Me</a> </li>  
             
-               <a href="#"> <li>Homework 1: Grandma's Lemon Meringue Pie</li> </a> 
-               <a href="#"><li>Homework 2: Movie Review</li></a> 
-               <a href="#"> <li>Lab 3: My Music Page</li></a> 
-               <a href="#"> <li>Homework 3: Movie Review PHP</li></a> 
-               <a href="#"> <li>Homework 4: NerdLuv</li></a> 
-               <a href="#"> <li>Homework 5: NerdLuv DB</li></a> 
-                <a href="#"><li>Homework 6: NerdLuv Session</li></a> 
-               <a href="#"><li>Final Project</li></a> 
+                <li><a href="#">Homework 1: Grandma's Lemon Meringue Pie</a> </li> 
+               <li><a href="#">Homework 2: Movie Review</a></li> 
+                <li><a href="#">Lab 3: My Music Page</a></li> 
+               <li><a href="#">Homework 3: Movie Review PHP</a></li>
+               <li><a href="#">Homework 4: NerdLuv</a></li>
+               <li><a href="#">Homework 5: NerdLuv DB</a></li>
+                <li><a href="#">Homework 6: NerdLuv Session</a></li>
+               <li><a href="#">Final Project</a></li>
             </ul>
         </div>
         <!--Division for the validation image-->
