--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>About Hillary Arinda</h1>
-    <div>
+    <div id="about">
         <p>My name is Hillary, a <span>meticulous thinker</span>, deeply immersed in the realms of computer science and web application programming.
             I am always keen on tackling challenges with a methodical and detailed approach. I am also a <span>proud father</span> of two sons and a 
             loving husband to the one beautiful wife, <span>Esther</span>.
@@ -17,7 +17,7 @@
         <hr/>
     </div>
 
-    <div>
+    <div id="myclasses">
         <h2>My Classes This Quarter</h2>
         <ul>
             <li>CS3909A -  Fundamental Programming Practices</li>
@@ -28,31 +28,31 @@
 
     </div>
 
-    <div>
+    <div id="mymovies">
         <h2>My Favorite Movies</h2>
         <p>( I like a blend of thrilling action, mind bending narratives, and magical adventures.. here is my favorites list!)</p>
         <ol>
-            <li>The superhero ensemble in <q>Avengers: Endgame</q> <a href="https://www.imdb.com/title/tt4154796/">(IMDB)</a></li>
-            <li>The dream-altering intrigue of <q>Inception</q><a href="https://www.imdb.com/title/tt1375666/?ref_=ttpl_ov">(IMDB)</a> </li>
-            <li>The magical finale of <q>Harry Potter and the Deathly Hallows – Part 2</q><a href="https://www.imdb.com/title/tt1201607/?ref_=fn_al_tt_1">(IMDB)</a></li>
+            <li>The superhero ensemble in <q>Avengers: Endgame </q> <a href="https://www.imdb.com/title/tt4154796/" id="avengers">(IMDB)</a></li>
+            <li>The dream-altering intrigue of <q>Inception </q> <a href="https://www.imdb.com/title/tt1375666/?ref_=ttpl_ov" id="inception">(IMDB)</a> </li>
+            <li>The magical finale of <q>Harry Potter and the Deathly Hallows Part 2 </q> <a href="https://www.imdb.com/title/tt1201607/?ref_=fn_al_tt_1" id="inception">(IMDB)</a> </li>
         </ol>
     </div>
 
-    <div>
+    <div id="moods">
         <h2>My Moods</h2>
         Happy:
-        <img src="happy cat.png" alt="happy robbotic cat"/>
+        <img class="images" src="happy cat.png" alt="happy robbotic cat" />
 
         sad:
-        <img src="sad cat.png" alt="a sad cat"/>
+        <img class="images" src="sad cat.png" alt="a sad cat"/>
     </div>
 
 
-    <div>
+    <div id="funfacts">
         <h2>Fun Facts About My Neigbors</h2>
     <ul>
         <li>James Balimunsi: The most <span>altruistic</span> neighbor you will ever find </li>
-        <li>Gunshot Ariho: <span>The life of the party, he's simply <span>vivacious</span> </span></li>
+        <li>Gunshot Ariho: The life of the party, he's simply <span>vivacious</span> </span></li>
 
     </ul>
     </div>
