--- a/lab2/aboutme.html
+++ b/lab2/aboutme.html
@@ -32,9 +32,9 @@
         <h2>My Favorite Movies</h2>
         <p>( I like a blend of thrilling action, mind bending narratives, and magical adventures.. here is my favorites list!)</p>
         <ol>
-            <li>The superhero ensemble in <q>Avengers: Endgame </q> <a href="https://www.imdb.com/title/tt4154796/" id="avengers">(IMDB)</a></li>
-            <li>The dream-altering intrigue of <q>Inception </q> <a href="https://www.imdb.com/title/tt1375666/?ref_=ttpl_ov" id="inception">(IMDB)</a> </li>
-            <li>The magical finale of <q>Harry Potter and the Deathly Hallows Part 2 </q> <a href="https://www.imdb.com/title/tt1201607/?ref_=fn_al_tt_1" id="harryporter">(IMDB)</a> </li>
+            <li>The superhero ensemble in <q>Avengers: Endgame </q> <a id="avengers" href="https://www.imdb.com/title/tt4154796/" >(IMDB)</a></li>
+            <li>The dream-altering intrigue of <q>Inception </q> <a id="inception" href="https://www.imdb.com/title/tt1375666/?ref_=ttpl_ov" >(IMDB)</a> </li>
+            <li>The magical finale of <q>Harry Potter and the Deathly Hallows Part 2 </q> <a id="harryporter" href="https://www.imdb.com/title/tt1201607/?ref_=fn_al_tt_1" >(IMDB)</a> </li>
         </ol>
     </div>
 
