made final clean ups to lab 4

--- a/lab4/workshopregistration.html
+++ b/lab4/workshopregistration.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="#" method="get" enctype="" novalidate autocomplete="on">
+    <form action="#" method="get"  novalidate autocomplete="on">
         <header>
             <h1 id="heading">Workshop Registration</h1>
 
