--- a/lab6/index.html
+++ b/lab6/index.html
@@ -16,7 +16,7 @@
     <h2>Answer 2</h2>
     <img class="images" src="QUESTION-2.jpg" title="Answer 2"/>
     
-    <h2>
+    <h2 class="q3">
         Question 3
     </h2>
         <a href="question3.js" title="Answer 3"> Answer 3</a>
